[package]
name = "strace-win"
version = "0.1.0"
edition = "2021"

[lib]
name = "debugger"

[[example]]
name = "strace"
path = "examples/strace.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
windows = { version = "0.54.0", features = ["Win32_System_ProcessStatus", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Memory", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Kernel"] }

[dev-dependencies]
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
